# tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yml
include/: kcf_tracker.h
launch/: kcf_tracker.launch
plugins/: tracking.xml
scripts/: tracker.py
src/: kcf_tracker.cpp
